[package]
name = "laika"
version = "0.1.0"
authors = ["Ben Morrison <ben@gbmor.dev>"]
description = "async Gemini protocol server"
license = "MIT"
edition = "2018"

[dependencies]
async-std = "^1.6"
async-tls = "^0.7"
clap = "^2.33"
ctrlc = "^3.1"
daemonize = "^0.4"
log = "^0.4"
privdrop = "^0.3"
simplelog = "^0.8"
rustls = "^0.17"
tree_magic = "^0.2"
url = "^2.1"

[profile.release]
opt-level = 3
lto = "thin"
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = true

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
incremental = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

